--- a/styles/style.css
+++ b/styles/style.css
@@ -51,9 +51,28 @@ section.banner-area {
     font-weight: 500;
     line-height: 24px;
 }
+
+.watch-btn:hover {
+    /* box-shadow: 5px 5px 10px goldenrod; */
+    background-color: #3DBAFD;
+    color: #002669;
+    transition: 0.8s;
+}
+
 .watch-btn i {
     padding-left: 10px;
     font-size: 14px;
+}
+
+.banner-image img {
+    float: right;
+    width: 90%;
+    transition: width 1s , height 1s, transform 1s;
+    
+}
+.banner-image img:hover {
+    cursor: pointer;
+    transform: scale(1.25,1.25) translate(-100px , 0px);
 }
 
 /* player grid css  */
@@ -105,17 +124,78 @@ section.banner-area {
     margin-bottom: 40px;
     margin-right: 80px;
 }
+
+.cta-image img {
+    /* border-radius: 50%; */
+    width: 80%;
+    transition: width 1s , height 1s, transform 1s;
+    
+}
+.cta-image img:hover {
+    cursor: pointer;
+    transform: scale(1.3,1.3);
+}
+
+/* match highlights area  */
+
 .match-highlights {
     width: 1170px;
 }
 .highlights-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
+    gap: 50px;
 }
 .single-highlight {
     display: flex;
     flex-direction: column;
+}
+
+.highlights-area {
+    background-color: #f7eded;
+    padding: 80px 0;
+}
+
+.section-title {
+    font-size: 42px;
+    text-align: center;
+    font-family: 'Poppins';
+    font-weight: 600;
+    /* margin: 0; */
+    /* padding: 0; */
+}
+
+.section-subtitle {
+    text-align: center;
+    padding: 0 200px;
+    margin-bottom: 50px;
+}
+
+.single-highlight {
+    padding: 30px;
+    /* border: 1px solid; */
+    border-radius: 20px;
+    box-shadow: 10px 10px 20px grey;
+    transition: width 0.5s, height 0.5s, transform 0.5s;
+}
+
+.single-highlight:hover {
+    transform: scale(1.1, 1.1);
+}
+
+.single-highlight img {
+    border-radius: 20px;
+}
+
+.highlight-title {
+    text-align: center;
+    font-size: 18px;
+    /* text-decoration: none; */
+}
+
+.highlight-title a {
+    text-decoration: none;
+    color: #0f0d15;
 }
 
 /* Copyright area  */
@@ -135,3 +215,4 @@ section.banner-area {
     border-radius: 50%;
     font-size: 18px;
 }
+
