--- a/styles/style.css
+++ b/styles/style.css
@@ -167,7 +167,7 @@ section.banner-area {
     font-size: 42px;
     text-align: center;
     font-family: 'Poppins';
-    font-weight: 600;
+    font-weight: 700;
     /* margin: 0; */
     /* padding: 0; */
 }
@@ -237,6 +237,9 @@ section.banner-area {
 .copyright {
     width: 450px;
     text-align: center;
+}
+.copyright-text p {
+    font-size: 18px;
 }
 .social-icons {
     margin: 22px 0;
