--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,9 @@
-
 /* Import google fonts "Poppins" */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap');
 
-/* Basic or base CSS */
+/************************
+    Basic or base CSS 
+*************************/
 body {
     margin: 0;
     padding: 0;
@@ -14,21 +15,22 @@ img {
     width: 100%;
 }
 
-/* banner area css  */
-
-section.banner-area {
-    background-color: #2D25A0;
-}
-
 .flex-container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-
-.banner, .cta {
+.banner,
+.cta,
+.players,
+.match-highlights,
+.image-gallery {
     width: 1170px;
+}
+
+.banner,
+.cta {
     display: flex;
     padding: 100px 0;
 }
@@ -36,12 +38,10 @@ section.banner-area {
 .half-width {
     width: 50%;
 }
-.banner-heading h1 {
-    color: white;
-    font-size: 64px;
-    line-height: 80px;
-    font-weight: 700;
-}
+
+/*********************
+    button css  
+*********************/
 .watch-btn {
     background-color: #E02C6D;
     text-decoration: none;
@@ -53,7 +53,6 @@ section.banner-area {
 }
 
 .watch-btn:hover {
-    /* box-shadow: 5px 5px 10px goldenrod; */
     background-color: #3DBAFD;
     color: #002669;
     transition: 0.8s;
@@ -64,24 +63,42 @@ section.banner-area {
     font-size: 14px;
 }
 
+
+/******************
+ banner area css  
+*******************/
+
+.banner-area {
+    background-color: #2D25A0;
+}
+
+.banner-heading h1 {
+    color: white;
+    font-size: 64px;
+    line-height: 80px;
+    font-weight: 700;
+}
+
 .banner-image img {
     float: right;
     width: 90%;
-    transition: width 1s , height 1s, transform 1s;
-    
-}
-.banner-image img:hover {
-    cursor: pointer;
-    transform: scale(1.25,1.25) translate(-100px , 0px);
+    transition: width 1s, height 1s, transform 1s;
+
 }
 
-/* player grid css  */
+.banner-image img:hover {
+    cursor: pointer;
+    transform: scale(1.25, 1.25) translate(-100px, 0px);
+}
+
+/******************
+ player grid css  
+ *****************/
 
 .players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
-    width: 1170px;
     padding: 120px 0;
 }
 
@@ -97,10 +114,10 @@ section.banner-area {
     background-color: #3DBAFD;
 }
 
-.single-player:hover h3, .single-player:hover p  {
+.single-player:hover h3,
+.single-player:hover p {
     color: black;
 }
-
 
 .player-name {
     color: #18191F;
@@ -116,7 +133,9 @@ section.banner-area {
     line-height: 26px;
 }
 
-/* Call to action area  */
+/**********************
+ Call to action area  
+ **********************/
 
 .cta-heading h1 {
     font-size: 48px;
@@ -135,41 +154,33 @@ section.banner-area {
 .cta-image img {
     /* border-radius: 50%; */
     width: 80%;
-    transition: width 1s , height 1s, transform 1s;
-    
+    transition: width 1s, height 1s, transform 1s;
 }
+
 .cta-image img:hover {
     cursor: pointer;
-    transform: scale(1.3,1.3);
+    transform: scale(1.3, 1.3);
 }
 
-/* match highlights area  */
-
-.match-highlights {
-    width: 1170px;
-}
-.highlights-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 50px;
-}
-.single-highlight {
-    display: flex;
-    flex-direction: column;
-}
+/***********************
+ Match highlights area  
+ ************************/
 
 .highlights-area {
     background-color: #f7eded;
     padding: 80px 0;
 }
 
+.highlights-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+}
 .section-title {
     font-size: 42px;
     text-align: center;
     font-family: 'Poppins';
     font-weight: 700;
-    /* margin: 0; */
-    /* padding: 0; */
 }
 
 .section-subtitle {
@@ -179,13 +190,14 @@ section.banner-area {
 }
 
 .single-highlight {
+    display: flex;
+    flex-direction: column;
     padding: 30px;
     /* border: 1px solid; */
     border-radius: 20px;
     box-shadow: 10px 10px 20px grey;
     transition: width 0.5s, height 0.5s, transform 0.5s;
 }
-
 .single-highlight:hover {
     transform: scale(1.1, 1.1);
 }
@@ -197,7 +209,6 @@ section.banner-area {
 .highlight-title {
     text-align: center;
     font-size: 18px;
-    /* text-decoration: none; */
 }
 
 .highlight-title a {
@@ -205,20 +216,25 @@ section.banner-area {
     color: #0f0d15;
 }
 
-/* image gallery section css  */
+/***************************
+ image gallery section css  
+ **************************/
 .image-gallery-area {
     background-color: #F7EDED;
 }
-.image-gallery {
-    width: 1170px;
-}
+
 .image-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
 }
-.single-image{
-    transition: width 1s, height 1s, transform 1s, box-shadow 1s ;
+
+.single-image {
+    transition: width 1s, height 1s, transform 1s, box-shadow 1s;
+}
+
+.single-image:hover {
+    transform: scale(1.1);
 }
 
 .single-image img {
@@ -226,28 +242,30 @@ section.banner-area {
     border-radius: 20px;
 }
 
-.single-image:hover {
-    transform: scale(1.1);
-}
-
-/* Copyright area  */
+/*******************
+ Copyright area  
+ *******************/
 .copyright-area {
     padding-top: 30px;
 }
+
 .copyright {
     width: 450px;
     text-align: center;
 }
-.copyright-text p {
-    font-size: 18px;
-}
+
 .social-icons {
     margin: 22px 0;
 }
+
 .social-icons i {
     background-color: #E7E7E8;
     color: #969BAB;
     padding: 10px;
     border-radius: 50%;
+    font-size: 18px;
+}
+
+.copyright-text p {
     font-size: 18px;
 }
