--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -5,8 +5,24 @@
 /* Mobile devices */
 
 @media only screen and (max-width:688px) {
+    .flex-container {
+        display: block;
+    }
+    .banner {
+        display: flex;
+        flex-direction: column;
+    }
+    .half-width {
+        width: 60%;
+    }
+    .banner-heading {
+        padding-left: 50px;
+    }
+    .players {
+        grid-template-columns: 1fr;
+        align-items: center;
+    }
     
-
 }
 
 /* Tablet devices */
