--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,8 @@ img {
 }
 
 .single-player {
+    display: flex;
+    flex-direction: column;
     padding: 15px;
     box-shadow: 10px 10px 20px grey;
     transition: background-color 1s, color 1s;
@@ -123,7 +125,7 @@ img {
     color: #18191F;
     font-size: 28px;
     font-weight: 700;
-    line-height: 40px;
+    margin-bottom: 5px;
 }
 
 .player-text {
